--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SandrinePatin/api_linkservice#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "ipware": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   }
